# dtu-mlops-garu

./: .gitignore  .pre-commit-config.yaml  LICENSE  MLOPS_spelling_mistakes.txt  README.md  pyproject.toml  requirements.txt  tasks.py  train.dockerfile  wandb_tester.py
.devcontainer/: devcontainer.json
.github/workflows/: linting.yaml  tests.yaml
config/: sweep.yaml  train_config.yaml
config/model/: model2.yaml
dockerfiles/: api.dockerfile  eval_entroypoint.sh  eval_entrypoint.sh  evaluate.dockerfile  evaluate2.dockerfile  train.dockerfile  wandb.dockerfile
dockerfiles/legacy/: eval_entrypoint_uv.sh  evaluate1.dockerfile  evaluate_uv1.dockerfile  evaluate_uv2.dockerfile  train1.dockerfile  train_uv1.dockerfile  train_uv2.dockerfile
docs/: mkdocs.yaml
docs/source/: index.md
notebooks/: baseline.ipynb
src/dtu_mlops_garu/: data.py  evaluate.py  main.py  model.py  train.py  visualize.py
src/dtu_mlops_garu/utils/: load_utils.py  plotting_utils.py  train_utils.py  wandb_utils.py
tests/: test_data.py  test_model.py  test_train.py
