[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "dtu_mlops_garu"
version = "0.0.1"
description = "Personal repository for the DTU MLOPS course"
authors = [
  { name = "Gabriel Agerholm Ruge", email = "gabrielruge@gmail.com" },
]
license = { file = "LICENSE" }
keywords = ["machine learning", "MLOps"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.6",
    "invoke>=2.2.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.0",
    "torch>=2.6.0",
    "torchvision>=0.24.1",
    "typer==0.15.1",
    "uvicorn==0.34.0",
]
[project.optional-dependencies]
dev = [
    "coverage==7.6.9",
    "invoke==2.2.0",
    "mkdocs-material==9.4.6",
    "mkdocs==1.6.1",
    "pre-commit==4.1.0",
    "pytest==8.3.4",
    "ruff==0.14.10",
    "mkdocstrings-python==1.12.2",
]
[dependency-groups] # Unclear to me what this does
dev = [
    "coverage==7.6.9",
    "invoke==2.2.0",
    "mkdocs-material==9.4.6",
    "mkdocs==1.6.1",
    "pre-commit==4.1.0",
    "pytest==8.3.4",
    "ruff==0.14.10",
    "mkdocstrings-python==1.12.2",
]
[project.scripts]
train = "dtu_mlops_garu.train:train_app"


[tool.uv.sources]
torch = [
    { index = "pytorch-cu130" },
]
torchvision = [
    { index = "pytorch-cu130" },
]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.ruff]
line-length = 120
lint.select = ["E","F","I"]
extend-select = ["E501"]

[tool.coverage.run]
omit = ["tests/*"]
