[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "dtu_mlops_garu"
version = "0.0.1"
description = "Personal repository for the DTU MLOPS course"
authors = [
  { name = "Gabriel Agerholm Ruge", email = "gabrielruge@gmail.com" },
]
license = { file = "LICENSE" }
keywords = ["machine learning", "MLOps"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.6",
    "gdown>=5.2.0",
    "hydra-core>=1.3.2",
    "invoke>=2.2.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.0",
    "omegaconf>=2.3.0",
    "pyqt5>=5.15.11",
    "pytorch-lightning>=2.6.0",
    "scikit-learn>=1.8.0",
    "torch>=2.5.0",
    "torchvision>=0.20.0",
    "typer==0.21.1",
    "uvicorn==0.34.0",
    "wandb>=0.23.1",
]
[project.optional-dependencies]
dev = [
    "coverage==7.6.9",
    "invoke==2.2.0",
    "mkdocs-material==9.4.6",
    "mkdocs==1.6.1",
    "pre-commit==4.1.0",
    "pytest==8.3.4",
    "ruff>=0.8.0",
    "mkdocstrings-python==1.12.2",
]
[dependency-groups] # Unclear to me what this does
dev = [
    "coverage==7.6.9",
    "invoke==2.2.0",
    "mkdocs-material==9.4.6",
    "mkdocs==1.6.1",
    "pre-commit==4.1.0",
    "pytest==8.3.4",
    "ruff>=0.8.0",
    "mkdocstrings-python==1.12.2",
]
[project.scripts]
train = "dtu_mlops_garu.train:train_app"


[tool.uv.sources]
torch = [
    { index = "pytorch-cu130", marker = "sys_platform == 'linux' and platform_machine == 'x86_64'" },
    { index = "pytorch-cpu", marker = "sys_platform == 'darwin' or sys_platform == 'win32'" },
]
torchvision = [
    { index = "pytorch-cu130", marker = "sys_platform == 'linux' and platform_machine == 'x86_64'" },
    { index = "pytorch-cpu", marker = "sys_platform == 'darwin' or sys_platform == 'win32'" },
]

[tool.uv]
required-environments = [
    "sys_platform == 'linux' and platform_machine == 'x86_64'",
    "sys_platform == 'darwin' and platform_machine == 'arm64'",
    "sys_platform == 'win32' and platform_machine == 'AMD64'",
]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.ruff]
src = ["src"]
target-version = "py312"
line-length = 120
lint.select = ["E", "F", "I"]
# lint.select = [
#   "A",
#   "ASYNC",
#   "B",
#   "BLE",
#   "C4",
#   "C90",
#   "COM",
#   "D",
#   "DJ",
#   "DTZ",
#   "E",
#   "EM",
#   "ERA",
#   "EXE",
#   "F",
#   "FA",
#   "I",
#   "ICN",
#   "INT",
#   "ISC",
#   "LOG",
#   "N",
#   "PGH",
#   "PIE",
#   "PT",
#   "PYI",
#   "Q",
#   "RET",
#   "RSE",
#   "S",
#   "SIM",
#   "SLF",
#   "SLOT",
#   "T10",
#   "TCH",
#   "TID",
#   "UP",
#   "W",
#   "YTT",
# ]
lint.ignore = [
  "B008",
  "B028",
  "B905",
  "COM812",
  "D100",
  "D107",
  "D203",
  "D211",
  "D212",
  "F821",
  "F841",
  "ISC001",
  "S301",
  "S311",
  "S603",
  "S605",
  "S607",
  "TC003",
]
[tool.ruff.lint.isort]
known-third-party = ["wandb", "hydra", "omegaconf", "matplotlib", "numpy", "torch", "typer"]
known-first-party = ["dtu_mlops_garu"]

[tool.coverage.run]
omit = [
  "tests/*",
  "*/tmp/*"]

[tool.coverage.report]
# Ignore errors for files that can't be found
ignore_errors = true
